frontend/test/should_fail/index_asArray_edge_same_argument_mismatch.grg
#using "index_edge_where_non_index_expected_model.gm"

rule i {
	if{ edgesFromIndexSameAsArray(fooi, "42").size() > 0; }
	
	modify {
	}
}
